Creating the global scoops variables in script file and deleting a class name from html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <h1>Weather Dashboard</h1>
        </header>
        <main class="d-flex">
-           <section class="col-12 col-md-3 custom-search">
+           <section class="col-12 col-md-3">
                <form class="mt-2">
                     <label for="City-input" class="bold">Search for a City</label>
                     <input type="text" id="city-input"   class="form-control mt-3 input-lg"  placeholder="Seattle">
